update dependencies (#11)
* update dependencies

* revert to java 25 and fix deprecated annotations

* add nullaway, errorprone, archunit and remove package-info-files

* add ArchitectureTest, use FakerExtended and add annotations

* requested changes

* requested change